[package]
name = "minesweeper-leptos-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.2", features = ["csr", "nightly"] }
gloo-timers = {version="0.2.6",  features = ["futures"]}
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
web-sys = "0.3.64"
uuid = { version = "1.4.0", features = ["v4", "js"] }
